@@ -4,12 +4,16 @@ Version 17.0 (05/04/2017) - RECOMMENDED
   as before. Now any implemented by user StatementExecution hooks are responsible for using the supplied
   StatementProceedingPoint to pass the call to the intercepted Statement "execute..." method or to the next registered
   StatementExecution hook via something like:
+
     (proxy, method, args, sqlQuery, sqlQueryParams, proceed) -> {
         try {
             // do something before the real method execution, for example, increment a queriesInProcess counter
             // or start a stopwatch
 
-            Object result = proceed.on(proxy, method, args, sqlQuery, sqlQueryParams, proceed);
+            Object result = proceed.on(proxy, method, args, sqlQuery, sqlQueryParams, proceed); // execute it
+
+            // examine a thrown SQLException if necessary, retry the Statement execution if appropriate, etc
+
             return result;
 
         } finally {
@@ -17,6 +21,7 @@ Version 17.0 (05/04/2017) - RECOMMENDED
             // or stop a stopwatch
         }
     }
+
   This construct allows for easy execution of supplied by user before and after Statement execution logic.
 
 * Fixed a minor bug in building sqlQueryParams.
